实现手动输入apikey、手动切换语言

--- a/subtitleBot.vcxproj.filters
+++ b/subtitleBot.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="editLangDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="apiKeyDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="subtitleBot.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="editLangDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="apiKeyDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
